src/test/deca/context/invalid/renduInter/03-wrong-type-init-bool-float.deca
{
boolean x = 4.5;
}